--- a/data/slides.yml
+++ b/data/slides.yml
@@ -40,21 +40,21 @@
     I'm a front-end developer at Code School.
 
 - description: >
-    We have our offices right over in Orlando. Being in Orlando, we get to have fun company events, like...
+    We have our offices right over in Orlando. Being in Orlando, we get to have fun company events.
   additional_images: true
   additional_images_number: 1
 
 - title: Epcot Food & Wine Festival
   description : >
-    Trips to the Epcot Food & Wine Festival each year, where we get to eat good
-    food, have intense "Rock, Paper Scissors" battles, and enjoy drinks and one
-    another's company.
+    Each year, we go to the Epcot Food & Wine Festival, where we get to eat
+    good food, have intense "Rock, Paper Scissors" battles, and enjoy drinks
+    and one another's company.
   additional_images: true
   additional_images_number: 2
 
 - title: WhirlyBall
   description : >
-    We also have enjoyed in several games of WhirlyBall.
+    We've played WhirlyBall which, if you haven't tried it, I highly recommend.
 
 - title: Orlando Magic
   description : >
@@ -63,7 +63,7 @@
 - title: What is Code School?
   description : >
     If you're not familiar with Code School, it is an online platform for
-    teaching web technologies.
+    learning web technologies.
   additional_images: true
   additional_images_number: 1
 
