Update slides, build

--- a/data/slides.yml
+++ b/data/slides.yml
@@ -47,7 +47,7 @@
 - title: Epcot Food & Wine Festival
   description : >
     Each year, we go to the Epcot Food & Wine Festival, where we get to eat
-    good food, have intense "Rock, Paper Scissors" battles, and enjoy drinks
+    good food, have intense "Rock, Paper, Scissors" battles, and enjoy drinks
     and one another's company.
   additional_images: true
   additional_images_number: 2
@@ -134,7 +134,7 @@
     write HTML & CSS.
 
 - description: >
-    It's an area of focus for unique individuals with particular skill sets.
+    It's an area of focus for unique individuals with particular skills.
 
 - description: >
     "Particular skills."
