--- a/data/slides.yml
+++ b/data/slides.yml
@@ -28,7 +28,7 @@
     *If you've been here before, you know what I'm talking about.*
 
 - description: >
-    So what am I hear to talk about? This talk is called, "Thinking Modular
+    So what am I here to talk about? This talk is called, "Thinking Modular
     CSS". What does that mean?
 
 - partial: true
